[gd_scene load_steps=25 format=2]

[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Bat.png" type="Texture" id=2]
[ext_resource path="res://collisions/HurtBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/Bat.gd" type="Script" id=4]
[ext_resource path="res://misc/Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://collisions/PlayerSelectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://collisions/HitBox.tscn" type="PackedScene" id=7]
[ext_resource path="res://collisions/SoftCollision.tscn" type="PackedScene" id=8]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=9]
[ext_resource path="res://shaders/white_shader.tres" type="Material" id=10]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "fly",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=7]
radius = 4.20465

[sub_resource type="CapsuleShape2D" id=8]
radius = 7.0
height = 6.0

[sub_resource type="CircleShape2D" id=9]
radius = 50.0

[sub_resource type="CircleShape2D" id=10]
radius = 4.56421

[sub_resource type="Animation" id=11]
resource_name = "shadow"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ShadowSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 0.5 ), Vector2( 0.8, 0.8 ), Vector2( 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=12]
radius = 4.37646

[sub_resource type="Animation" id=13]
resource_name = "start"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=14]
resource_name = "stop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Bat" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="ShadowSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 10 )
position = Vector2( 0, -12 )
frames = SubResource( 6 )
animation = "fly"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )

[node name="HurtBox" parent="." instance=ExtResource( 3 )]
collision_layer = 8

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, -13 )
shape = SubResource( 8 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 2

[node name="PlayerSelectionZone" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="PlayerSelectionZone" index="0"]
self_modulate = Color( 1, 0.635294, 0, 0.411765 )
shape = SubResource( 9 )

[node name="HitBox" parent="." instance=ExtResource( 7 )]
collision_mask = 4

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 0.75, -15.4375 )
shape = SubResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "shadow"
anims/shadow = SubResource( 11 )

[node name="SoftCollision" parent="." instance=ExtResource( 8 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 12 )

[node name="WanderController" parent="." instance=ExtResource( 9 )]

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
anims/start = SubResource( 13 )
anims/stop = SubResource( 14 )
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="invincibility_ended" from="HurtBox" to="." method="_on_HurtBox_invincibility_ended"]
[connection signal="invincibility_started" from="HurtBox" to="." method="_on_HurtBox_invincibility_started"]
[connection signal="dead" from="Stats" to="." method="_on_Stats_dead"]

[editable path="HurtBox"]

[editable path="PlayerSelectionZone"]

[editable path="HitBox"]

[editable path="SoftCollision"]
